# mongol_barota_track

./: .gitignore  README.MD  README.md
src/communication/: CMakeLists.txt  package.xml
src/communication/src/: receiver.cpp  rscp.pb.cc  sender.cpp
src/data_media/: package.xml  setup.cfg  setup.py
src/data_media/data_media/: camera.py  detector.py  gesture_pub.py  gestures.py  visualizer.py
src/rscpcoms/: CMakeLists.txt  package.xml
src/stage/: CMakeLists.txt  package.xml
src/stage/launch/: stage_system.launch.py
src/stage/src/: arm_disarm.cpp  cm.cpp  gps_coordinate.cpp  hm.cpp  rscp.pb.h  search_area.cpp  stage.cpp  stage_pub.cpp  task_completed.cpp
src/teensy_data/: CMakeLists.txt  package.xml
src/teensy_data/src/: data_subscriber.cpp  keyboard_pub.cpp
